--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -68,6 +68,7 @@
   </div>
 </div>
 
+@defer (on viewport){
 <div *ngIf="allExpenses.length > 0">
   <app-piechart
     [title]="'Expense report'"
@@ -75,6 +76,9 @@
     [totalData]="getTotalExpense()"
   ></app-piechart>
 </div>
+} @placeholder (minimum 100ms) {
+<p>Loading...</p>
+} @defer (on viewport){
 <div *ngIf="allIncomes.length > 0" class="mt-4">
   <app-piechart
     [title]="'Income report'"
@@ -82,3 +86,6 @@
     [totalData]="getTotalIncome()"
   ></app-piechart>
 </div>
+} @placeholder (minimum 100ms) {
+<p>Loading...</p>
+}
